nova (2012.1-6) unstable; urgency=low

  [ Thomas Goirand ]
  * Now depends on sqlite3 (Closes: #674510).
  * nova-compute-{hypervisor} are now conflicting each others.
  * Fixed URL to the format 1.0 for the debian/copyright file.
  * nova-api is now split into multiple nova-api-* packages.

 -- Thomas Goirand <zigo@debian.org>  Fri, 01 Jun 2012 06:39:15 +0000

nova (2012.1-5) unstable; urgency=low

  [ Ghe Rivero ]
  * Not start daemons from init by default. Added /etc/default/nova file
  * Added some new packages: api-os-compute, api-os-volume, api-ec2,
  compute-qemu, api-metadata
  * Instal api-paste.ini from nova-common

 -- Ghe Rivero <ghe.rivero@stackops.com>  Mon, 28 May 2012 15:27:57 +0200

nova (2012.1-4) unstable; urgency=low

  [ Ghe Rivero ]
  * Properly use dbconfig postrm at nova-common. Closes: #673986
  * Added python db modules to suggests. Closes: #672888

  [ Mehdi Abaakou ]
  * Remove obsolete volume_group option in nova-volume init script. Closes:
    #674030

 -- Ghe Rivero <ghe.rivero@stackops.com>  Thu, 24 May 2012 08:50:35 +0200

nova (2012.1-3) unstable; urgency=low

  * 3 files are moved from python-nova to nova-compute, nova-network and 
  nova-volumes, add Replaces and Breaks statements to enable smooth upgrade of
  version in testing. Closes: #665375 
  * Call dbconfig postrm script and remove nova-manage log. Closes: #670435
  * Remove doc/sourc/api on dh_autoclean 
  * Purge nova-* log files

 -- Mehdi Abaakouk <sileht@sileht.net>  Wed, 09 May 2012 11:55:04 +0200

nova (2012.1-2) unstable; urgency=low

  * Fixed CVE-2012-2101. Closes: #670637

 -- Ghe Rivero <ghe.rivero@stackops.com>  Wed, 02 May 2012 11:29:53 +0200

nova (2012.1-1) unstable; urgency=low

  * New upstream release

 -- Ghe Rivero <ghe.rivero@stackops.com>  Mon, 09 Apr 2012 09:19:38 +0200

nova (2012.1~rc3-1) unstable; urgency=low

  * New upstream release

 -- Ghe Rivero <ghe.rivero@stackops.com>  Wed, 04 Apr 2012 10:14:01 +0200
