@@ -19,7 +19,9 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 	dh_auto_build
+ifeq (,$(findstring nodocs, $(DEB_BUILD_OPTIONS)))
 	python setup.py build_sphinx
+endif
 
 override_dh_install:
 	dh_install
@@ -43,10 +45,15 @@ override_dh_fixperms:
 override_dh_installinit:
 	dh_installinit
 	dh_installinit -pnova-console --name=nova-consoleauth
+
 override_dh_installdocs:
+ifeq (,$(findstring nodocs, $(DEB_BUILD_OPTIONS)))
 	dh_installdocs
 	ln -sf /usr/share/javascript/jquery/jquery.js $(CURDIR)/debian/nova-doc/usr/share/doc/nova-doc/html/_static/jquery.js
 	ln -sf /usr/share/javascript/underscore/underscore.min.js $(CURDIR)/debian/nova-doc/usr/share/doc/nova-doc/html/_static/underscore.js
+else
+override_dh_installman:
+endif
 
 override_dh_python2:
 	dh_python2
